# Team-5-Memento-Masters

./: .gitignore  AdjustTaxCommand.cpp  AdjustTaxCommand.h  Airport.cpp  Airport.h  Apartment.cpp  Apartment.h  BuildCommand.cpp  BuildCommand.h  Building.cpp  Building.h  BuildingFactory.cpp  BuildingFactory.h  CMakeLists.txt  Citizen.cpp  Citizen.h  CitizenObserver.h  City.cpp  City.h  CityObserver.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h  Command_FactoryMethod_main.cpp  CommercialBuilding.cpp  CommercialBuildingFactory.cpp  CommercialBuildingFactory.h  CommercialBuillding.h  CommercialCommand.h  Doxyfile  ExitCommand.h  Factory.cpp  Factory.h  House.cpp  House.h  IndustrialBuilding.cpp  IndustrialBuilding.h  IndustrialBuildingFactory.cpp  IndustrialBuildingFactory.h  (+42 more)
.github/workflows/: doxygen.yml  linting.yml
CitizenMood/: AverageMood.cpp  AverageMood.h  CitizenMood.cpp  CitizenMood.h  ExcellentMood.cpp  ExcellentMood.h  PoorMood.cpp  PoorMood.h
Command/: AdjustTaxCommand.cpp  AdjustTaxCommand.h  BuildCommand.cpp  BuildCommand.h  City.cpp  City.h  Command.cpp  Command.h  CommandManager.cpp  CommandManager.h
CommandUI/: BuildCommand.h  ChangePolicyCommand.h  Citizen.cpp  Citizen.h  City.cpp  City.h  CommercialCommand.h  ContinueCommand.h  ExitCommand.h  HelpCommand.h  IndustrialCommand.h  LandmarkCommand.h  MapNode.cpp  MapNode.h  Menu.h  MenuCommand.h  PolicyCommand.h  RemoveCommand.h  ResidentialCommand.h  TaxCommand.h  TransportCommand.h
Complaints/: ComplaintHandler.cpp  ComplaintHandler.h  ComplaintRouter.cpp  ComplaintRouter.h  Mayor.cpp  Mayor.h  TransportDepartment.cpp  TransportDepartment.h  UtilitiesDepartment.cpp  UtilitiesDepartment.h
FactoryMethod/: Airport.cpp  Airport.h  Apartment.cpp  Apartment.h  Building.cpp  Building.h  BuildingFactory.cpp  BuildingFactory.h  CommercialBuilding.cpp  CommercialBuilding.h  CommercialBuildingFactory.cpp  CommercialBuildingFactory.h  Construction.cpp  Construction.h  Contruction.cpp  Factory.cpp  Factory.h  Functional.cpp  Functional.h  House.cpp  House.h  IndustrialBuilding.cpp  IndustrialBuilding.h  IndustrialBuildingFactory.cpp  IndustrialBuildingFactory.h  LandmarkBuilding.cpp  LandmarkBuilding.h  LandmarkBuildingFactory.cpp  LandmarkBuildingFactory.h  Main.cpp  Mall.cpp  Mall.h  Monument.cpp  Monument.h  Office.cpp  Office.h  PWOut.cpp  PWOut.h  Park.cpp  Park.h  (+20 more)
Memento/: Citizen.cpp  Citizen.h  City.cpp  City.h  CityCaretaker.cpp  CityCaretaker.h  CityMemento.cpp  CityMemento.h  main.cpp
Observer/: CitizenObserver.cpp  CitizenObserver.h  CityObserver.cpp  CityObserver.h
Strategy/: Citizen.cpp  Citizen.h  CommunityServiceStrategy.cpp  CommunityServiceStrategy.h  CrimePunishmentStrategy.cpp  CrimePunishmentStrategy.h  DeathSentenceStrategy.cpp  DeathSentenceStrategy.h  PrisonStrategy.cpp  PrisonStrategy.h  mainForStrategy.cpp
Tax/: Government.cpp  GovernmentPolicyMemento.cpp  PolicyHistory.cpp  TaxDepartment.cpp  TaxDepartment.h  TaxSystem.cpp  TaxSystem.h  TestingMain.cpp
Tax/Command/: AdjustTaxCommand.cpp  AdjustTaxCommand.h  CommandManager.h
Visitor/: Building.cpp  Building.h  BuildingReport.cpp  BuildingReport.h  Citizen.cpp  Citizen.h  CitizenReport.cpp  CitizenReport.h  City.cpp  City.h  Report.cpp  Report.h  Road.cpp  Road.h  RoadReport.cpp  RoadReport.h  Visitor.cpp  Visitor.h
src/: City.h  CommercialCommand.h
tests/: BuildingFactoryTest.cpp  ComplaintRouterUnitTest.cpp  ComplaintsHandlerUnitTest.cpp  CrimePunishmentStrategyTest.cpp  ExcellentMoodStateUnitTest.cpp  MementoUnitTest.cpp  ObserverUnitTest.cpp  TaxSystemUnitTest.cpp
